--- a/pom.xml
+++ b/pom.xml
@@ -1,61 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.akiban</groupId>
-    <artifactId>akiban-cserver</artifactId>
-    <packaging>jar</packaging>
-    <version>0.0.2-SNAPSHOT</version>
-    <name>akiban-cserver</name>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.akiban</groupId>
+	<artifactId>akiban-cserver</artifactId>
+	<packaging>jar</packaging>
+	<version>0.0.2-SNAPSHOT</version>
+	<name>akiban-cserver</name>
 
-    <repositories>
-        <repository>
-            <id>libs-releases-local</id>
-            <name>Repository</name>
-            <layout>default</layout>
-            <url>http://172.16.20.117:9999/artifactory/libs-releases-local</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>repo</id>
-            <name>libs-snapshots-local</name>
-            <url>http://172.16.20.117:9999/artifactory/libs-snapshots-local</url>
-        </repository>
-        <repository>
-            <id>thimbleware.repo</id>
-            <url>http://thimbleware.com/maven</url>
-        </repository>
-    </repositories>
-    
-    <pluginRepositories>
-        <pluginRepository>
-            <id>plugins-releases-local</id>
-            <name>Plugin Repository</name>
-            <url>http://172.16.20.117:9999/artifactory/plugins-releases-local</url>
-            <layout>default</layout>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-        </pluginRepository>
-    </pluginRepositories>
-    <distributionManagement>
-        <repository>
-            <id>repo</id>
-            <name>libs-snapshots-local</name>
-            <url>http://172.16.20.117:9999/artifactory/libs-snapshots-local</url>
-        </repository>
-        <snapshotRepository>
-            <id>repo</id>
-            <name>libs-snapshots-local</name>
-            <url>http://172.16.20.117:9999/artifactory/libs-snapshots-local</url>
-        </snapshotRepository>
-    </distributionManagement>
+	<repositories>
+		<repository>
+	            <id>JBOSS</id>
+        	    <name>JBoss Repository</name>
+	            <url>http://repository.jboss.org/maven2/</url>
+        	</repository>
+		<repository>
+	            <id>Artifact-Repository</id>
+        	    <name>Artifact-Repository</name>
+	            <url>http://www.artifact-repository.org/maven2/</url>
+        	</repository>
+		<repository>
+		    <id>central</id>
+		    <name>Maven Repository Switchboard</name>
+		    <layout>default</layout>
+		    <url>http://repo1.maven.org/maven2</url>
+		      <snapshots>
+		        <enabled>false</enabled>
+		      </snapshots>
+		</repository>
+	</repositories>
+	<!--pluginRepositories>
+		<pluginRepository>
+		      <id>central</id>
+		      <name>Maven Plugin Repository</name>
+		      <url>http://repo1.maven.org/maven2</url>
+		      <layout>default</layout>
+		      <snapshots>
+		        <enabled>false</enabled>
+		      </snapshots>
+		      <releases>
+	        	<updatePolicy>never</updatePolicy>
+		      </releases>
+		    </pluginRepository>
+	</pluginRepositories-->
 
-    <dependencies>
+<dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -73,42 +61,42 @@
             <version>3.2.0.ALPHA4</version>
         </dependency>
         <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr</artifactId>
-            <version>3.1.3</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>velocity</groupId>
-            <artifactId>velocity-dep</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.10</version>
-        </dependency>
-        <dependency>
+	    <groupId>org.antlr</groupId>
+	    <artifactId>antlr</artifactId>
+	    <version>3.1.3</version>
+	    <scope>compile</scope>
+	</dependency>
+	<dependency>
+	    <groupId>commons-cli</groupId>
+	    <artifactId>commons-cli</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>velocity</groupId>
+	    <artifactId>velocity-dep</artifactId>
+	    <version>1.4</version>
+	</dependency>
+	<dependency>
+	      <groupId>mysql</groupId>
+	      <artifactId>mysql-connector-java</artifactId>
+	      <version>5.1.10</version>
+	</dependency>
+	<dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.9</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.help</groupId>
-            <artifactId>javahelp</artifactId>
-            <version>2.0.02</version>
-        </dependency>
-        <dependency>
+        </dependency>    
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>1.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>javax.help</groupId>
+	    <artifactId>javahelp</artifactId>
+	    <version>2.0.02</version>
+	</dependency>
+	<dependency>
             <groupId>com.akiban</groupId>
             <artifactId>akiban-persistit</artifactId>
             <version>2.1-SNAPSHOT</version>
@@ -142,137 +130,120 @@
             <artifactId>jmemcached-core</artifactId>
             <version>0.9.1</version>
         </dependency>
-    </dependencies>
+</dependencies>
 
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.5</version>
-                <executions>
-                    <execution>
-                        <id>reserve-network-port</id>
-                        <goals>
-                            <goal>reserve-network-port</goal>
-                        </goals>
-                        <phase>process-resources</phase>
-                        <configuration>
-                            <portNames>
-                                <portName>cserver.port</portName>
-                                <portName>rmi.port</portName>
-                                <portName>jmx.port</portName>
-                                <portName>debug.port</portName>
-                            </portNames>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <!--mainClass>com.akiban.ais.MySQLToNetwork</mainClass-->
-                            <mainClass>com.akiban.cserver.CServer</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <!-- This is used for inheritance merges ?? -->
-                        <phase>install</phase>
-                        <!-- Append to the install phase -->
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.antlr</groupId>
-                <artifactId>antlr3-maven-plugin</artifactId>
-                <version>3.1.3-1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>antlr</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <argLine>-Xmx512m -Xms128m -Drmiport=${rmi.port} -Dcserver.port=${cserver.port}</argLine>
-                    <includes>
-                        <include>**/*Test.java</include>
-                        <include>**/*Test?.java</include>
-                    </includes>
-                    <excludes>
-                        <!-- None -->
-                    </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>integration-test</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>verify</id>
-                        <goals>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>1.2</version>
-                <configuration>
-                    <findbugsXmlOutput>true</findbugsXmlOutput>
-                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-                    <xmlOutput>true</xmlOutput>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
+<build>
+    <plugins>
+	<plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>reserve-network-port</id>
+            <goals>
+              <goal>reserve-network-port</goal>
+            </goals>
+            <phase>process-resources</phase>
+            <configuration>
+              <portNames>
+                <portName>cserver.port</portName>
+                <portName>debug.port</portName>
+              </portNames>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <configuration>
+      <source>1.6</source>
+      <target>1.6</target>
+    </configuration>
+      </plugin>
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-source-plugin</artifactId>
+    <executions>
+      <execution>
+        <id>attach-sources</id>
+        <phase>package</phase>
+        <goals>
+          <goal>jar</goal>
+        </goals>
+      </execution>
+    </executions>
+      </plugin>
+      <plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <configuration>
+      <descriptorRefs>
+        <descriptorRef>jar-with-dependencies</descriptorRef>
+      </descriptorRefs>
+      <archive>
+        <manifest>
+          <!--mainClass>com.akiban.ais.MySQLToNetwork</mainClass-->
+	  <mainClass>com.akiban.cserver.CServer</mainClass>
+        </manifest>
+      </archive>
+    </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id> <!-- This is used for inheritance merges ?? -->
+            <phase>install</phase> <!-- Append to the install phase -->
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+    <groupId>org.antlr</groupId>
+    <artifactId>antlr3-maven-plugin</artifactId>
+    <version>3.1.3-1</version>
+    <executions>
+      <execution>
+        <goals>
+          <goal>antlr</goal>
+        </goals>
+      </execution>
+    </executions>
+    </plugin>
+      <plugin>
+        <groupId>com.atlassian.maven.plugins</groupId>
+        <artifactId>maven-clover2-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <generateHistorical>true</generateHistorical>
+          <historyDir>/clover/history</historyDir>
+          <license><![CDATA[PpMOqBXixXwmrECcCXcNWMiPdoNUxGimeeaAxQLAHXjuxGq
+mj2L00k1BlPcP>5lr6tcyjP5U2KJ>74Tfqpr3R>yJZm5IOW
+rqortTONOOQqqprRPqnuVOQmPNRMMqqnnnVVTXusxXowuUx
+xMnmnmUUnotqnmqummmmmUUnotqnmqummmmmUUXhfYXkWfk
+ZUUn]]></license>
+          <generateXml>true</generateXml>
+        </configuration>
+      </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+            <argLine>-Xmx512m -Xms128m -Dcserver.port=${cserver.port}</argLine>
+            <includes>
+                <include>**/*Test.java</include>
+                <include>**/*Test?.java</include>
+            </includes>
+            <excludes>
+                <!-- None -->
+            </excludes>
+        </configuration>
+    </plugin>
+    </plugins>
+</build>
 </project>
 
 
