--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -30,14 +30,13 @@ akserver.treespace.default=*:akiban_data
 
 mysql.install.dir=
 
-persistit.buffer.count.8192=1K
+persistit.buffersize=16384
 persistit.journalpath=${datapath}/akiban_journal
 persistit.logfile=${datapath}/persistit_${timestamp}.log
-persistit.logsize=1G
-persistit.sysvolume=akiban_system
 persistit.timeout=60000
+persistit.volume.1=${datapath}/akiban_system.v0,create,pageSize:${buffersize},initialSize:10K,extensionSize:1K,maximumSize:10G
+persistit.volume.2=${datapath}/akiban_txn.v0,create,pageSize:${buffersize},initialSize:1M,extensionSize:1M,maximumSize:10G
+persistit.volume.3=${datapath}/akiban_data.v01,create,pageSize:${buffersize},initialSize:5M,extensionSize:5M,maximumSize:1024G
+persistit.sysvolume=akiban_system
 persistit.txnvolume=akiban_txn
-persistit.volume.1=${datapath}/akiban_system.v0,create,pageSize:8K,initialSize:10K,extensionSize:1K,maximumSize:10G
-persistit.volume.2=${datapath}/akiban_txn.v0,create,pageSize:8K,initialSize:1M,extensionSize:1M,maximumSize:10G
-persistit.volume.3=${datapath}/akiban_data.v01,create,pageSize:8k,initialSize:5M,extensionSize:5M,maximumSize:100G
 
