--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -23,6 +23,9 @@ akserver.max_heap_mb=
 akserver.memcached.port=11211
 akserver.memcached.output.format=json
 akserver.name=
+akserver.network.threads.min=1
+akserver.network.threads.max=200
+akserver.network.shutdown.waitseconds=10
 akserver.port=5140
 akserver.tcp_no_delay=true
 akserver.verbose=
