--- a/conf/config/server.properties
+++ b/conf/config/server.properties
@@ -31,3 +31,8 @@ akserver.port=5140
 # port to which to start RMI. the Persistit AdminUI utility can attach
 # via RMI.  remove to avoid starting a RMI server
 persistit.rmiport=8081
+
+# port on which to start the Postgres Server.
+# remove to avoid starting a Postgres Server.
+# (A real Postgres server listens on 5432.)
+akserver.postgres.port=15432
